--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tsconfig/svelte": "^5.0.4",
 		"@types/eslint": "^9.6.0",
+		"@types/node": "^20.14.12",
 		"carbon-components-svelte": "^0.85.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -28,7 +30,8 @@
 		"sass": "^1.77.8",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
-		"typescript": "^5.0.0",
+		"svelte-preprocess": "^6.0.2",
+		"typescript": "^5.5.4",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
